# Proyecto-procesador-parlelo

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
data/: data.h
lib/: coder.cpp  coder.h  func.cpp  func.h  inc.h  ipc.cpp  ipc.h
src/: com.sh  receiver.cpp  reciver.cpp  sender.cpp
